# reppo

./: Note.txt  README.md  notes.md  pyproject.toml  reppo.code-workspace
bc_utils/: bc_model_20260124_165816_186.pth  bc_model_20260125_194430_195  bc_model_20260125_202455_141  bc_model_20260127_155000_193  bc_model_actor_20260127_163558_70  bc_model_actor_20260127_195206_180.pth
config/: dpo.yaml  ppo.yaml  reppo.yaml  reppo_maniskill.yaml  reppo_mj_playground.yaml  rpo.yaml
saved_models/: bc_model_20260120_131245_0  bc_model_20260120_131245_10  bc_model_20260120_131245_11  bc_model_20260120_131245_126  bc_model_20260120_131245_137  bc_model_20260120_131245_14  bc_model_20260120_131245_156  bc_model_20260120_131245_160  bc_model_20260120_131245_170  bc_model_20260120_131245_18  bc_model_20260120_131245_19  bc_model_20260120_131245_2  bc_model_20260120_131245_21  bc_model_20260120_131245_22  bc_model_20260120_131245_25  bc_model_20260120_131245_26  bc_model_20260120_131245_28  bc_model_20260120_131245_3  bc_model_20260120_131245_33  bc_model_20260120_131245_34  bc_model_20260120_131245_38  bc_model_20260120_131245_57  bc_model_20260120_131245_59  bc_model_20260120_131245_75  bc_model_20260120_131245_84  bc_model_20260120_131245_87  bc_model_20260120_131245_99
saved_models_state_noise/: bc_model_20260123_212203_0  bc_model_20260123_212203_100  bc_model_20260123_212203_13  bc_model_20260123_212203_14  bc_model_20260123_212203_16  bc_model_20260123_212203_19  bc_model_20260123_212203_2  bc_model_20260123_212203_20  bc_model_20260123_212203_22  bc_model_20260123_212203_27  bc_model_20260123_212203_29  bc_model_20260123_212203_33  bc_model_20260123_212203_4  bc_model_20260123_212203_41  bc_model_20260123_212203_43  bc_model_20260123_212203_44  bc_model_20260123_212203_5  bc_model_20260123_212203_52  bc_model_20260123_212203_56  bc_model_20260123_212203_60  bc_model_20260123_212203_63  bc_model_20260123_212203_67  bc_model_20260123_212203_68  bc_model_20260123_212203_76  bc_model_20260123_212203_8  bc_model_20260123_212203_82  bc_model_20260123_212203_9
saved_models_v2/: bc_model_20260119_173230_0  bc_model_20260119_173230_1  bc_model_20260119_173736_0  bc_model_20260119_173736_10  bc_model_20260119_173736_100  bc_model_20260119_173736_11  bc_model_20260119_173736_116  bc_model_20260119_173736_134  bc_model_20260119_173736_14  bc_model_20260119_173736_153  bc_model_20260119_173736_16  bc_model_20260119_173736_178  bc_model_20260119_173736_19  bc_model_20260119_173736_2  bc_model_20260119_173736_25  bc_model_20260119_173736_26  bc_model_20260119_173736_27  bc_model_20260119_173736_32  bc_model_20260119_173736_33  bc_model_20260119_173736_4  bc_model_20260119_173736_43  bc_model_20260119_173736_50  (+8 more)
(+172 files in other folders)
